# FTP-project

./: CMakeLists.txt
client/: client.c
common/: defines.h  exitable_functions.c  exitable_functions.h  file_io_helper.c  file_io_helper.h  path_helper.c  path_helper.h  request.c  request.h  socket_helper.c  socket_helper.h  transfer_packet.h  try_catch.c  try_catch.h
server/: server.c
